--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@okta/okta-react": "^6.4.3",
+		"@okta/okta-signin-widget": "^6.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.10.0"
