--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"@okta/okta-auth-js": "^7.7.0",
+		"@okta/okta-auth-js": "^6.9.0",
 		"@okta/okta-react": "^6.4.3",
 		"@okta/okta-signin-widget": "^6.3.3",
 		"react": "^18.3.1",
@@ -18,6 +18,7 @@
 		"react-router-dom": "^6.10.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.7",
 		"@types/node": "^20.14.9",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
