--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.1.2",
 		"@okta/okta-auth-js": "^6.9.0",
 		"@okta/okta-react": "^6.4.3",
 		"@okta/okta-signin-widget": "^6.3.3",
