--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
+		"dev": "set HTTPS=true && vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
@@ -16,7 +16,8 @@
 		"@okta/okta-signin-widget": "^6.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-router-dom": "^6.10.0"
+		"react-router-dom": "^6.10.0",
+		"vite-plugin-mkcert": "^1.17.5"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.7",
